--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="="
+            android:text="@string/equals"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnMin"
@@ -27,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="3"
+            android:text="@string/_3"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btnAns"
             app:layout_constraintEnd_toEndOf="@+id/btnAns"
@@ -39,7 +39,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="6"
+            android:text="@string/_6"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn3"
             app:layout_constraintEnd_toEndOf="@+id/btn3"
@@ -51,7 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="9"
+            android:text="@string/_9"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn6"
             app:layout_constraintEnd_toEndOf="@+id/btn6"
@@ -64,7 +64,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="0"
+            android:text="@string/_0"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnAns"
@@ -77,7 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="2"
+            android:text="@string/_2"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn0"
             app:layout_constraintEnd_toEndOf="@+id/btn0"
@@ -89,7 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="5"
+            android:text="@string/_5"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn2"
             app:layout_constraintEnd_toEndOf="@+id/btn2"
@@ -101,7 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="8"
+            android:text="@string/_8"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn5"
             app:layout_constraintEnd_toEndOf="@+id/btn5"
@@ -119,6 +119,7 @@
             android:enabled="false"
             android:inputType="textPersonName"
             android:textColor="@android:color/darker_gray"
+            android:autoSizeTextType="uniform"
             android:textSize="60sp"
             app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintHorizontal_bias="0.0"
@@ -134,9 +135,10 @@
             android:layout_width="0dp"
             android:layout_height="90dp"
             android:background="@android:color/background_light"
-            android:gravity="bottom|right"
-            android:text="0"
+            android:gravity="bottom|end"
+            android:text="@string/_0"
             android:textColor="@android:color/background_dark"
+            android:autoSizeTextType="uniform"
             android:textSize="40sp"
             app:layout_constraintBottom_toTopOf="@+id/btn9"
             app:layout_constraintEnd_toEndOf="@+id/editText"
@@ -151,7 +153,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="."
+            android:text="@string/dot"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn0"
@@ -165,7 +167,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="1"
+            android:text="@string/_1"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btnDot"
             app:layout_constraintEnd_toEndOf="@+id/btnDot"
@@ -178,7 +180,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="4"
+            android:text="@string/_4"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn1"
             app:layout_constraintEnd_toEndOf="@+id/btn1"
@@ -191,7 +193,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="7"
+            android:text="@string/_7"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn4"
             app:layout_constraintEnd_toEndOf="@+id/btn4"
@@ -204,7 +206,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="-"
+            android:text="@string/minus"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btnPlus"
             app:layout_constraintEnd_toEndOf="@+id/btnPlus"
@@ -217,7 +219,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="+"
+            android:text="@string/plus"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -229,7 +231,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="C"
+            android:text="@string/clear"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btnDiv"
             app:layout_constraintEnd_toEndOf="@+id/btnDiv"
@@ -243,7 +245,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="*"
+            android:text="@string/multiply"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btnMin"
             app:layout_constraintEnd_toEndOf="@+id/btnMin"
@@ -255,7 +257,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
-            android:text="/"
+            android:text="@string/divide"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btnMul"
             app:layout_constraintEnd_toEndOf="@+id/btnMul"
